--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="text/javascript" src="myScript.js"></script>
 </head>
 <body>
+
+    <h1>Rock Paper Scissors</h1>
+<div id="buttons">
+    <button id="rockBtn">Rock</button>
+    <button id="paperBtn">Paper</button>
+    <button id="scissorsBtn">Scissors</button>
+</div>
+
+    <div class=" scores">
+        <h2 id="playerScore">Player:</h2>
+        <h2 id="cpuScore">Cpu:</h2>
+        <h2 id="winnerDialog"></h2>
+        <button id="replayBtn">replay</button>
+    </div>
     
+    <script type="text/javascript" src="myScript.js"></script>
 </body>
 </html>
